--- a/V1_Origen_Putumayo/src/styles/Footer.css
+++ b/V1_Origen_Putumayo/src/styles/Footer.css
@@ -1,9 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Albert+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+
 .footer {
   background-color: #ffffff;
   color: #fff;
   padding: 40px 20px 20px;
   font-family: Arial, sans-serif;
   box-shadow: #b6b6b6;
+  font-weight: bold;
+  font-family: "Albert Sans", sans-serif;
 }
 
 .footer-content {
@@ -38,7 +42,7 @@
 }
 
 .footer-item:hover {
-  color: #f4b400; /* color acento */
+  color: #006839; /* color acento */
 }
 
 /* COPY */
